test/scc/pp/errors/012.a
012.t:1:3: error: '#' is not expected here